--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -50,6 +50,7 @@
                     <MenuItem Header="Update Roll Numbers" Command="{Binding ShowRollUpdateWindowCommand, Source={StaticResource vm}}"></MenuItem>
                     <MenuItem Header="Update Registration" Command="{Binding ShowRegistrationUpdaterCommand, Source={StaticResource vm}}"/>
                     <MenuItem Header="Promotion basic" Command="{Binding ShowPromotionBasicViewCommand, Source={StaticResource vm}}"></MenuItem>
+                    <MenuItem Header="Update Address" Command="{Binding ShowStdAddrUpdateCommand, Source={StaticResource vm}}"></MenuItem>
                     <Separator />
                     <MenuItem Header="Import" Click="MenuItem_Click_2"/>
                 </MenuItem>
