--- a/NaimouzaHighSchool/views/MarkEntryView.xaml
+++ b/NaimouzaHighSchool/views/MarkEntryView.xaml
@@ -97,7 +97,7 @@
                     <Label Margin="2" Content="{Binding SubsGroup, Source={StaticResource mrkvm}}" Width="200"/>
                     <Label Content="Full Mark" Margin="2" />
                     <TextBox Margin="2" 
-                             Text="{Binding FullMark, Source={StaticResource mrkvm}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Text="{Binding FullMark, Source={StaticResource mrkvm}, Converter={StaticResource intConverter}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              Width="60" />
                 </StackPanel>
             </Border>
