--- a/NaimouzaHighSchool/Views/MainWindowView.xaml
+++ b/NaimouzaHighSchool/Views/MainWindowView.xaml
@@ -45,7 +45,7 @@
                 </MenuItem>
                 <MenuItem Header="Student">
                     <MenuItem Header="Add" Click="MenuItem_Click_3" />
-                    <MenuItem Header="View" Command="{Binding ShowStudentDetailViewCommand, Source={StaticResource vm}}"></MenuItem>
+                    <MenuItem Header="_View" Command="{Binding ShowStudentDetailViewCommand, Source={StaticResource vm}}"></MenuItem>
                     <MenuItem Header="Delete" Command="{Binding ShowDeleteViewCommand, Source={StaticResource vm}}"></MenuItem>
                     <MenuItem Header="Update Roll Numbers" Command="{Binding ShowRollUpdateWindowCommand, Source={StaticResource vm}}"></MenuItem>
                     <MenuItem Header="Update Registration" Command="{Binding ShowRegistrationUpdaterCommand, Source={StaticResource vm}}"/>
