--- a/NaimouzaHighSchool/Views/StudentDataReadView.xaml
+++ b/NaimouzaHighSchool/Views/StudentDataReadView.xaml
@@ -856,11 +856,14 @@
                         <TabItem Header="General">
                             <Border>
                                 <Border.Background>
+                                    <ImageBrush ImageSource="/NaimouzaHighSchool;component/Asset/Images/raw1.jpg"/>
+                                </Border.Background>
+                                <!--<Border.Background>
                                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                         <GradientStop Color="#FFF1F1F1" Offset="0" />
                                         <GradientStop Color="#FFB0BFC8" Offset="1" />
                                     </LinearGradientBrush>
-                                </Border.Background>
+                                </Border.Background>-->
                                 <Grid Margin="20">
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="Auto" />
@@ -919,17 +922,21 @@
                                     </Grid>
 
                                     <Grid Grid.Row="2" Margin="0, 0, 0, 10">
-                                        <Border Background="White">
+                                        <Grid.Background>
+                                            <SolidColorBrush Color="Transparent" Opacity="1"/>
+                                        </Grid.Background>
+                                        <Border Background="Transparent">
                                             <Border.Effect>
                                                 <DropShadowEffect BlurRadius="10" Color="#ccc" Direction="-90" RenderingBias="Quality" ShadowDepth="-2" />
                                             </Border.Effect>
                                         </Border>
                                         <Border Padding="10">
                                             <Border.Background>
-                                                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                                <!--<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                                                     <GradientStop Color="#FFB0BFC8" Offset="0"/>
                                                     <GradientStop Color="White" Offset="1"/>
-                                                </LinearGradientBrush>
+                                                </LinearGradientBrush>-->
+                                                <SolidColorBrush Color="Black" Opacity=".8"/>
                                             </Border.Background>
                                             <Grid>
                                                 <Grid.ColumnDefinitions>
@@ -940,6 +947,7 @@
                                                     <Grid.Resources>
                                                         <Style TargetType="Label">
                                                             <Setter Property="FontSize" Value="14" />
+                                                            <Setter Property="Foreground" Value="#E6EE9C"/>
                                                         </Style>
                                                     </Grid.Resources>
                                                     <Grid.RowDefinitions>
@@ -953,7 +961,7 @@
                                                         <ColumnDefinition />
                                                     </Grid.ColumnDefinitions>
                                                     <StackPanel Orientation="Horizontal">
-                                                        <Path Data="M10,4A4,4 0 0,1 14,8A4,4 0 0,1 10,12A4,4 0 0,1 6,8A4,4 0 0,1 10,4M10,14C14.42,14 18,15.79 18,18V20H2V18C2,15.79 5.58,14 10,14M20,12V7H22V12H20M20,16V14H22V16H20Z" Fill="#000" />
+                                                        <Path Data="M10,4A4,4 0 0,1 14,8A4,4 0 0,1 10,12A4,4 0 0,1 6,8A4,4 0 0,1 10,4M10,14C14.42,14 18,15.79 18,18V20H2V18C2,15.79 5.58,14 10,14M20,12V7H22V12H20M20,16V14H22V16H20Z" Fill="#4CAF50" />
                                                         <Label Content="Gender " />
                                                     </StackPanel>
                                                     <Label Grid.Column="1" Content=" : " Foreground="#009688" />
@@ -961,13 +969,13 @@
                                                         <Label Content="{Binding TxbGen, Source={StaticResource dObj}}" />
                                                     </StackPanel>
                                                     <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                                        <Path VerticalAlignment="Center" Data="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z" Fill="#000" />
+                                                        <Path VerticalAlignment="Center" Data="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z" Fill="#4CAF50" />
                                                         <Label Content="Date of Birth " VerticalAlignment="Center" />
                                                     </StackPanel>
                                                     <Label Grid.Row="1" Grid.Column="1" Content=" : " Foreground="#009688" />
                                                     <Label Grid.Row="1" Grid.Column="2" Content="{Binding DobString, Source={StaticResource dObj}, StringFormat=f}" />
                                                     <StackPanel Grid.Row="2" Orientation="Horizontal">
-                                                        <Path Data="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z" Fill="#000" />
+                                                        <Path Data="M15,13H16.5V15.82L18.94,17.23L18.19,18.53L15,16.69V13M19,8H5V19H9.67C9.24,18.09 9,17.07 9,16A7,7 0 0,1 16,9C17.07,9 18.09,9.24 19,9.67V8M5,21C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H6V1H8V3H16V1H18V3H19A2,2 0 0,1 21,5V11.1C22.24,12.36 23,14.09 23,16A7,7 0 0,1 16,23C14.09,23 12.36,22.24 11.1,21H5M16,11.15A4.85,4.85 0 0,0 11.15,16C11.15,18.68 13.32,20.85 16,20.85A4.85,4.85 0 0,0 20.85,16C20.85,13.32 18.68,11.15 16,11.15Z" Fill="#4CAF50" />
                                                         <Label Content="Age On Today " />
                                                     </StackPanel>
                                                     <Label Grid.Row="2" Grid.Column="1" Content=" : " Foreground="#009688" />
@@ -977,6 +985,7 @@
                                             </Grid>
                                         </Border>
                                     </Grid>
+                                    
                                     <Grid Grid.Row="3" Margin="0, 5">
                                         <Border>
                                             <Border Background="White">
